--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ header .navbar .nav-link {
   font-size: 18px;
   outline: none !important;
   text-transform: uppercase;
-  letter-spacing: .05em;
+  letter-spacing: .11em;
 }
 
 @media (max-width: 991.98px) {
@@ -2138,4 +2138,42 @@ blockquote p {
 .services {
   left: 40%;
   text-transform: uppercase;
+}
+
+.abouts span {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.mrg {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.abouts img {
+  width:130px;
+  height:120px;
+}
+
+@media only screen and (max-width: 1016px) {
+  .abouts span {
+    font-size: 16px;
+    text-align: center;
+    margin-top: 2px;
+  }
+}
+
+@media only screen and (max-width: 1016px) {
+  .mrg {
+    margin-left: 2px;
+    margin-right: 2px;
+  }
+}
+
+@media only screen and (max-width: 1016px) {
+  .abouts img {
+    width: 95px;
+    height: 85px;
+  }
 }
