fix routing and active page

--- a/functions/views/about.ejs
+++ b/functions/views/about.ejs
@@ -55,5 +55,7 @@
         <!-- Footer Section -->
         <%- include('templates/footer'); -%>
         <!-- Footer End -->
+
+        <%- include('templates/custom_js'); -%>
     </body>
 </html>
