--- a/functions/views/templates/head.ejs
+++ b/functions/views/templates/head.ejs
@@ -1,4 +1,4 @@
-<title>Cromsom - Home</title>
+<title>Cromosom - Home</title>
 <link rel="shortcut icon" href="img/icon2.png" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
