--- a/functions/views/templates/header.ejs
+++ b/functions/views/templates/header.ejs
@@ -6,22 +6,22 @@
         
     <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-5 col-lg-6 col-md-8 text-center">
         <div class="container">
-            <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img class="img-responsive" src="img/logo.png"></a>
+            <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img id="logo_img" class="img-fluid" src="img/logo.png"></a>
             <button class="navbar-toggler mb-3 mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li id="nav_work" class="nav-item">
                         <a class="nav-link" href="/work">work</a>
                     </li>
-                    <li class="nav-item active about">
+                    <li id="nav_about" class="nav-item">
                         <a class="nav-link" href="/about">about</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="nav_contact" class="nav-item">
                         <a class="nav-link" href="/contact">contact</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="nav_funwork" class="nav-item">
                         <a class="nav-link" href="/funwork">Funwork</a>
                     </li>
                 </ul>
