--- a/functions/views/work.ejs
+++ b/functions/views/work.ejs
@@ -43,5 +43,7 @@
        <!-- Footer Section -->
         <%- include('templates/footer'); -%>
         <!-- Footer End -->
+
+        <%- include('templates/custom_js'); -%>
     </body>
 </html>
