add template admin

--- a/functions/views/login.ejs
+++ b/functions/views/login.ejs
@@ -75,7 +75,7 @@
           firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
               
-              location.href = '/admin';
+              location.href = '/admin_index';
            }else{
               console.log("Login Gagal");
               alert('Login Gagal');
