--- a/functions/views/templates/admin_head.ejs
+++ b/functions/views/templates/admin_head.ejs
@@ -4,7 +4,9 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>SB Admin - Blank Page</title>
+<title>Cromosom - Admin</title>
+
+<link rel="shortcut icon" href="img/icon2.png" />
 
 <!-- Custom fonts for this template-->
 <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
