--- a/functions/views/admin_script.ejs
+++ b/functions/views/admin_script.ejs
@@ -1,10 +1,46 @@
+
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+      </a>
+    
+      <!-- Logout Modal-->
+      <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+              <a class="btn btn-primary" onclick="logout()">Logout</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+      <!-- Bootstrap core JavaScript-->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    
+      <!-- Core plugin JavaScript-->
+      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    
+      <!-- Custom scripts for all pages-->
+      <script src="js/sb-admin.min.js"></script>
+      
 <script>
+    
     cekLogin();
     function cekLogin(){
 
         firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
-            console.log(user);
+           
             
             } else {
             // // No user is signed in.
