--- a/functions/views/templates/admin_sidebar.ejs
+++ b/functions/views/templates/admin_sidebar.ejs
@@ -5,9 +5,20 @@
             <span>Cek Website</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="far fa-edit"></i>
+                <span>Edit</span>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                <h6 class="dropdown-header">Template:</h6>
+                <a class="dropdown-item" href="/admin_edit_footer">Footer</a>
+                <div class="dropdown-divider"></div>
+                <h6 class="dropdown-header">Item:</h6>
+                <a class="dropdown-item" href="/admin_edit_work">Work</a>
+                <a class="dropdown-item" href="/admin_edit_team">Team</a>
+                <a class="dropdown-item" href="/admin_edit_funwork">Funwork</a>
+                <a class="dropdown-item" href="/admin_edit_service">Service</a>
+            </div>
         </li>
       </ul>
