repair image team

--- a/functions/views/about.ejs
+++ b/functions/views/about.ejs
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <h5 class="black-lines pb-4">Our Team</h5>
-                    <div class="container row abouts">
+                    <div class="row abouts ml-1">
                         <div class="mrg">    
                             <img class="rounded-circle px-2"  src="img/contoh project1.png">
                             <div class="caption"><span>Lorem Ipsum</span></div>
@@ -35,6 +35,7 @@
                             <img class="rounded-circle px-2" src="img/contoh project1.png">
                             <div class="caption"><span>Lorem Ipsum</span></div>
                         </div>
+                        
                     </div>    
                 </div>
             </div>
