--- a/functions/views/templates/footer.ejs
+++ b/functions/views/templates/footer.ejs
@@ -3,11 +3,11 @@
         <div class="row mb-5">
             <div class="col-lg-4">
                 <h3 class="reds">About</h3>
-                <p>We’re branding agency based in Makassar, Indonesia. We embrace our client to thrive in the challenging competition, and most importantly, is to be DIFFERENT.</p>
+                <p id="aboutTxt">We’re branding agency based in Makassar, Indonesia. We embrace our client to thrive in the challenging competition, and most importantly, is to be DIFFERENT.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="reds">Contact</h3>    
-                <p>Makassar, Indonesia<br>cromosom.studio@gmail.com<br><br>Hj. Anne Resa C/6, Bringkanaya 90242<br> Makassar, Indonesia</p>
+                <p id="contactTxt">Makassar, Indonesia<br>cromosom.studio@gmail.com<br><br>Hj. Anne Resa C/6, Bringkanaya 90242<br> Makassar, Indonesia</p>
             </div>        
             <div class="col-lg-4 ">  
                 <div class="mt-5">
@@ -29,3 +29,11 @@
         </div>
     </div>
 </footer>
+<script type="text/javascript">
+    const  db = firebase.database();
+        db.ref('/footer').once('value', function(snapshot) { // load realtime
+        let footer = snapshot.val();
+        $("#aboutTxt").text(footer.about);
+        $("#contactTxt").text(footer.contact);
+    });
+</script>
