--- a/functions/views/templates/admin_head.ejs
+++ b/functions/views/templates/admin_head.ejs
@@ -22,6 +22,7 @@
 
    <!-- Add additional services that you want to use -->
    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-auth.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-database.js"></script>
    <script>
         // Initialize Firebase
         var config = {
