--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@ body {
   font-size: 18px;
   line-height: 1.9;
   color: #6c757d;
+  overflow-x: hidden;
 }
 
 a {
@@ -1865,7 +1866,7 @@ blockquote p {
 
 }
 
-.funwork {
+.artwork {
   color: #ffffff;
   font-family: 'Poppins', sans-serif;
   font-family: 'Lato', sans-serif;
@@ -1876,7 +1877,7 @@ blockquote p {
   padding-bottom: 15px;
 }
 
-.funwork::after {
+.artwork::after {
   content: "";
   position: absolute;
   left: 10px;
@@ -2198,13 +2199,13 @@ blockquote p {
 }
 
 @media only screen and (max-width: 1016px) {
-  .funwork::after {
+  .artwork::after {
     display: none;
   }
 }
 
 @media only screen and (max-width: 1016px) {
-  .funwork {
+  .artwork {
     margin-bottom: 0px;
     padding-bottom: 0px;
   }
@@ -2402,8 +2403,4 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 .grid figure p {
 	letter-spacing: 1px;
 	font-size: 68.5%;
-}
-
-#logo_img{
-  max-width: 300px;
 }
