--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -18,78 +18,63 @@
 <!-- Body Section -->
     <div class="container-fluid bg-light my-4">
 
-        <div class="row text-center text-lg-left contents">
+        <div class="text-center text-lg-left contents">
 
-
-            <div class="col-md-4 nopadding grid">
-                <figure class="effect-zoe mb-0">
-                    <a href="workdetail.html" class="d-block h-100">
+            <div class="row">
+                 
+                <div class="col-12 mb-0 homegambar nopadding">                   
+                    <a href="workdetail.html">
                         <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                        <figcaption>
-                        <div class="homepg col-md-12 pb-3 pt-3">
-                            <h3 class="" href="#">Qahwa Gayo</h3>
-                        </div>
-                        </figcaption>
                     </a>
-                </figure>
+                    <div class="overlay">
+                        <h3 class="text ml-2">Qahwa Gayo</h3>
+                    </div>
+                </div>
+                      
             </div>
-            <div class="col-md-4 nopadding grid">
-                <figure class="effect-zoe mb-0">
-                    <a href="workdetail.html" class="d-block h-100">
-                        <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                        <figcaption>
-                        <div class="homepg col-md-12 pb-3 pt-3">
-                            <h3 class="" href="#">Qahwa Gayo</h3>
-                        </div>
-                        </figcaption>
-                    </a>
-                </figure>
-            </div>
-            <div class="col-md-4 nopadding grid">
-                <figure class="effect-zoe mb-0">
-                    <a href="workdetail.html" class="d-block h-100">
-                        <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                        <figcaption>
-                        <div class="homepg col-md-12 pb-3 pt-3">
-                            <h3 class="" href="#">Qahwa Gayo</h3>
-                        </div>
-                        </figcaption>
-                    </a>
-                </figure>
-            </div>
-
-
-                <!-- <div class="col-md-12 nopadding">
-                        <div class="">
-                            <a href="workdetail.html" class="d-block h-100">
-                                <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                                <div class="homepg col-md-12 pb-3 pt-3">
-                                    <h3 class="" href="#">Qahwa Gayo</h3>
-                                </div>
-                            </a>
+            <div class="row">
+                 
+                    <div class="col-12 mb-0 homegambar nopadding">                   
+                        <a href="workdetail.html">
+                            <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                        </a>
+                        <div class="overlay">
+                            <h3 class="text ml-2">Qahwa Gayo</h3>
                         </div>
                     </div>
-                    <div class="col-md-12 nopadding">
-                        <div class="">
-                            <a href="workdetail.html" class="d-block h-100">
+                          
+                </div>
+                <div class="row">
+                 
+                        <div class="col-12 mb-0 homegambar nopadding">                   
+                            <a href="workdetail.html">
                                 <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                                <div class="homepg col-md-12 pb-3 pt-3">
-                                    <h3 class="" href="#">Qahwa Gayo</h3>
-                                </div>
                             </a>
+                            <div class="overlay">
+                                <h3 class="text ml-2">Qahwa Gayo</h3>
+                            </div>
                         </div>
+                              
                     </div>
-                    <div class="col-md-12 nopadding">
-                        <div class="">
-                            <a href="workdetail.html" class="d-block h-100">
-                                <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                                <div class="homepg col-md-12 pb-3 pt-3">
-                                    <h3 class="" href="#">Qahwa Gayo</h3>
-                                </div>
-                            </a>
+            <!-- <div class="row">
+                    <div class="nopadding grid">
+                            <figure class="effect-zoe mb-0">
+                                <a href="workdetail.html" class="d-block h-100">
+                                    <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                                    <figcaption>
+                                    <div class="homepg col-md-12 pb-3 pt-3">
+                                        <h3 class="" href="#">Qahwa Gayo</h3>
+                                    </div>
+                                    </figcaption>
+                                </a>
+                            </figure>
                         </div>
-                    </div> -->
-                    <a class="text-center viewm col-md-12 mt-4 mb-4" href="work.html">View More</a>
+            </div> -->
+           
+                 <div class="row">
+                        <a class="text-center viewm col-md-12 mt-4 mb-4" href="work.html">View More</a>
+                 </div>
+                    
         </div>
 
     </div>
