--- a/functions/views/templates/header.ejs
+++ b/functions/views/templates/header.ejs
@@ -1,12 +1,12 @@
 <!-- Header Section -->
 <header class="container">
     <div class="site-heading text-center d-none d-lg-block">
-        <a href="/"><img class="site-logo pt-3" src="img/logo.png"></a>
+        <a href="/"><img class="site-logo pt-3" src="img/logo.png" ></a>
     </div>
         
     <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-5 col-lg-6 col-md-8 text-center">
         <div class="container">
-            <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="/"><img id="logo_img" class="img-fluid" src="img/logo.png"></a>
+            <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="/"><img id="logo_img" class="img-fluid limit-icon-width" src="img/logo.png"></a>
             <button class="navbar-toggler mb-3 mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
