--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,6 +122,7 @@ header .navbar .nav-link {
 .site-logo a {
   color: #000;
   font-size: 90px;
+  
 }
 
 @media (max-width: 991.98px) {
@@ -2129,6 +2130,7 @@ blockquote p {
   height: 80vh;
   -o-object-fit: cover;
   object-fit: cover;
+
 } 
 
 .viewm {
@@ -2403,4 +2405,35 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 .grid figure p {
 	letter-spacing: 1px;
 	font-size: 68.5%;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(19, 12, 12, 0.507);
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.homegambar:hover .overlay {
+  height: 15%;
+}
+
+.text {
+  color: white;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  
+}
+
+.limit-icon-width{
+  max-width: 250px;
 }
