fix image about size

--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -23,19 +23,20 @@
             <div class="row">
                  
                 <div class="col-12 mb-0 homegambar nopadding">                   
-                    <a href="workdetail.html">
+                    <a href="/workdetail">
                         <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                    
+                        <div class="overlay">
+                            <h3 class="text ml-2">Qahwa Gayo</h3>
+                        </div>
                     </a>
-                    <div class="overlay">
-                        <h3 class="text ml-2">Qahwa Gayo</h3>
-                    </div>
                 </div>
                       
             </div>
             <div class="row">
                  
                     <div class="col-12 mb-0 homegambar nopadding">                   
-                        <a href="workdetail.html">
+                        <a href="/workdetail">
                             <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
                         </a>
                         <div class="overlay">
@@ -47,7 +48,7 @@
                 <div class="row">
                  
                         <div class="col-12 mb-0 homegambar nopadding">                   
-                            <a href="workdetail.html">
+                            <a href="/workdetail">
                                 <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
                             </a>
                             <div class="overlay">
