--- a/functions/views/about.ejs
+++ b/functions/views/about.ejs
@@ -23,18 +23,14 @@
                 <div class="col-md-6 mb-5">
                     <h5 class="black-lines pb-4">Our Team</h5>
                     <div class="row abouts ml-1">
-                        <div class="mrg">    
-                            <img class="rounded-circle px-2"  src="img/contoh project1.png">
+                        <div class="mrg col-4">    
+                            <img class="rounded-circle px-1 img-fluid img-responsive"  src="img/contoh project1.png">
                             <div class="caption"><span>Lorem Ipsum</span></div>
                         </div>
-                        <div class="mrg">    
-                            <img class="rounded-circle px-2" src="img/contoh project1.png">
-                            <div class="caption"><span>Lorem Ipsum</span></div>
-                        </div>
-                        <div class="mrg">    
-                            <img class="rounded-circle px-2" src="img/contoh project1.png">
-                            <div class="caption"><span>Lorem Ipsum</span></div>
-                        </div>
+                        <div class="mrg col-4">    
+                                <img class="rounded-circle px-1 img-fluid img-responsive"  src="img/contoh project1.png">
+                                <div class="caption"><span>Lorem Ipsum</span></div>
+                            </div>
                         
                     </div>    
                 </div>
