--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2156,8 +2156,8 @@ blockquote p {
 }
 
 .abouts img {
-  width:130px;
-  height:120px;
+  /* width:150px;
+  height:150px; */
 }
 
 @media only screen and (max-width: 1016px) {
