--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -73,7 +73,7 @@
             </div> -->
            
                  <div class="row">
-                        <a class="text-center viewm col-md-12 mt-4 mb-4" href="work.html">View More</a>
+                        <a class="text-center viewm col-md-12 mt-4 mb-4" href="/work">View More</a>
                  </div>
                     
         </div>
