--- a/functions/views/admin_edit_contact.ejs
+++ b/functions/views/admin_edit_contact.ejs
@@ -23,19 +23,19 @@
 
 
         <!-- Page Content -->
-        <h1>Footer</h1>
+        <h1>Contact</h1>
         <hr>
       
-        <h3>About</h3>
+        <h3>Column 1</h3>
         <div class="form-group">
             <div class="form-label-group">                            
-                <textarea class="form-control" style="width:100%" id="aboutTxt" rows="5" placeholder="Masukkan teks About"></textarea>
+                <textarea class="form-control" style="width:100%" id="column1Txt" rows="5" placeholder="Masukkan teks kolom 1"></textarea>
             </div>
         </div>
-        <h3>Contact</h3>
+        <h3>Column 2</h3>
         <div class="form-group">
             <div class="form-label-group">                            
-                <textarea class="form-control" style="width:100%" id="contactTxt" rows="5" placeholder="Masukkan teks Contact"></textarea>
+                <textarea class="form-control" style="width:100%" id="column2Txt" rows="5" placeholder="Masukkan teks kolom 2"></textarea>
             </div>
         </div>
         
@@ -58,19 +58,19 @@
   <%- include('admin_script'); -%>
     <script type="text/javascript">
         
-            db.ref('/footer').once('value', function(snapshot) { // load realtime
-            let footer = snapshot.val();
-            $("#aboutTxt").text(footer.about);
-            $("#contactTxt").text(footer.contact);
+            db.ref('/contact').once('value', function(snapshot) { // load realtime
+            let contact = snapshot.val();
+            $("#column1Txt").text(contact.column1);
+            $("#column2Txt").text(contact.column2);
         });
 
         $('#simpanBtn').click(function() {
-            let about = $('#aboutTxt').val();
-            let contact = $('#contactTxt').val();
-            db.ref('/footer').set({
+            let column1= $('#column1Txt').val();
+            let column2 = $('#column2Txt').val();
+            db.ref('/contact').set({
                 
-                "about" : about,
-                "contact" : contact
+                "column1" : column1,
+                "column2" : column2
 
             }, function(error) {
             if (error) {
