--- a/functions/views/login.ejs
+++ b/functions/views/login.ejs
@@ -58,7 +58,7 @@
     firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
             
-            location.href = '/admin_index';
+            location.href = '/admin';
             } else {
             // // No user is signed in.
             console.log("Tidak ada user yang login");
@@ -75,7 +75,7 @@
           firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
               
-              location.href = '/admin_index';
+              location.href = '/admin';
            }else{
               console.log("Login Gagal");
               alert('Login Gagal');
