--- a/functions/views/templates/admin_head.ejs
+++ b/functions/views/templates/admin_head.ejs
@@ -34,4 +34,5 @@
           messagingSenderId: "179322650357"
         };
         firebase.initializeApp(config);
+        const  db = firebase.database();
       </script>
