--- a/functions/views/templates/header.ejs
+++ b/functions/views/templates/header.ejs
@@ -12,16 +12,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item  <% if (page === 'work') { %> active work  <% } %>">
+                    <li class="nav-item  <% if (page === 'Work') { %> active work  <% } %>">
                         <a class="nav-link" href="/work">work</a>
                     </li>
-                    <li class="nav-item  <% if (page === 'about') { %> active about  <% } %>">
+                    <li class="nav-item  <% if (page === 'About') { %> active about  <% } %>">
                         <a class="nav-link" href="/about">about</a>
                     </li>
-                    <li class="nav-item  <% if (page === 'contact') { %> active contact  <% } %>">
+                    <li class="nav-item  <% if (page === 'Contact') { %> active contact  <% } %>">
                         <a class="nav-link" href="/contact">contact</a>
                     </li>
-                    <li class="nav-item  <% if (page === 'funwork') { %> active funwork  <% } %>">
+                    <li class="nav-item  <% if (page === 'Funwork') { %> active funwork  <% } %>">
                         <a class="nav-link" href="/funwork">Funwork</a>
                     </li>
                 </ul>
