--- a/functions/views/templates/admin_sidebar.ejs
+++ b/functions/views/templates/admin_sidebar.ejs
@@ -11,8 +11,10 @@
                 <span>Edit</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                <h6 class="dropdown-header">Template:</h6>
+                <h6 class="dropdown-header">Text:</h6>
                 <a class="dropdown-item" href="/admin_edit_footer">Footer</a>
+                <a class="dropdown-item" href="/admin_edit_about">About</a>
+                <a class="dropdown-item" href="/admin_edit_contact">Contact</a>
                 <div class="dropdown-divider"></div>
                 <h6 class="dropdown-header">Item:</h6>
                 <a class="dropdown-item" href="/admin_edit_work">Work</a>
