--- a/functions/views/templates/admin_head.ejs
+++ b/functions/views/templates/admin_head.ejs
@@ -23,6 +23,7 @@
    <!-- Add additional services that you want to use -->
    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-auth.js"></script>
    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-database.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-storage.js"></script>
    <script>
         // Initialize Firebase
         var config = {
@@ -34,5 +35,6 @@
           messagingSenderId: "179322650357"
         };
         firebase.initializeApp(config);
-        const  db = firebase.database();
+        const   db = firebase.database();
+        const   storage = firebase.storage();
       </script>
