--- a/functions/views/about.ejs
+++ b/functions/views/about.ejs
@@ -23,14 +23,13 @@
                 <div class="col-md-6 mb-5">
                     <h5 class="black-lines pb-4">Our Team</h5>
                     <div class="row abouts ml-1">
-                        <div class="mrg col-5">    
-                            <img class="rounded-circle px-1 img-fluid img-responsive"  src="img/contoh project1.png">
-                            <div class="caption"><span>Lorem Ipsum</span></div>
-                        </div>
-                        <div class="mrg col-5">    
-                                <img class="rounded-circle px-1 img-fluid img-responsive"  src="img/contoh project1.png">
-                                <div class="caption"><span>Lorem Ipsum</span></div>
+                        <%  team.forEach(function(isi) { var data = isi.val(); %>
+                            <div class="mrg col-5">    
+                                <img class="rounded-circle px-1 img-fluid img-responsive"  src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/foto%2F<%= data.foto %>?alt=media">
+                                <div class="caption"><span><%= data.nama %></span></div>
                             </div>
+                        <%  }); %>         
+                        
                         
                     </div>    
                 </div>
