--- a/functions/views/admin_edit_team.ejs
+++ b/functions/views/admin_edit_team.ejs
@@ -9,7 +9,7 @@
 
 </head>
 <style>
-    #image-preview{
+    .foto-preview{
         max-height: 150px;
     }
 
@@ -52,6 +52,37 @@
 
       </div>
       <hr>
+
+      <table id="tabelTeam" class="table table-bordered display responsive" width="100%" cellspacing="0">
+            <thead>
+                <tr>
+                    <th>Nama</th>
+                    <th>Keterangan</th>
+                    <th>Foto</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                    <% dataLoad = JSON.stringify(team); %>
+                    <%  team.forEach(function(isi) { var data = isi.val(); %>
+                        <tr>                                                            
+                            <td><%= data.nama %></td>
+                            <td><%= data.keterangan %></td>
+                            <td>
+                                <% if (data.foto !== "") {%>
+                                    <img class="img-thumbnail foto-preview" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/foto%2F<%= data.foto %>?alt=media">
+                                <% } else {%>
+                                    <p>Tidak Ada Foto</p>
+                                <% } %>
+                            </td>
+                            <td>
+                                <a class="btn btn-info btn-sm" href="#dataModal" data-toggle="modal" data-action="edit" data-child-id="<%= isi.key %>">Edit</a>                                                                    
+                                <a class="btn btn-danger btn-sm" href="#dataModal" data-toggle="modal" data-action="delete" data-child-id="<%= isi.key %>">Hapus</a>                                                                    
+                            </td>                                                                                                               
+                        </tr>                                                                        
+                    <%  }); %>                                                           
+            </tbody>
+        </table>     
       <!-- /.container-fluid -->
 
       <!-- Sticky Footer -->
@@ -107,26 +138,39 @@
        
        $('#dataModal').on('show.bs.modal', function(e) {
             let dataObj;
-            let nama, keterangan, foto, namaFoto;
+            let nama, keterangan, foto, namaFoto, typeFoto;
+
+            namaFoto = "";
             //get data-id attribute of the clicked element
-            var dataId = $(e.relatedTarget).data('child-id');
+            let dataId = $(e.relatedTarget).data('child-id');
             action = $(e.relatedTarget).data('action');
 
             
 
-            // if(action == 'edit' || action == 'delete'){
-         
-            //     nama = dataObj[dataId].nama;
-            //     kode = dataObj[dataId].kode;
-            //     detail = dataObj[dataId].detail;
-            // }
+            if(action == 'edit' || action == 'delete'){
+                dataObj = <%-dataLoad%>;
+                nama = dataObj[dataId].nama;
+                keterangan = dataObj[dataId].keterangan;
+                namaFoto = dataObj[dataId].foto;
+            }
                                 
             let judulTxt = $(e.currentTarget).find('h4[id="judul"]');            
             let namaTxt = $(e.currentTarget).find('input[id="nama"]');
             let keteranganTxt = $(e.currentTarget).find('input[id="keterangan"]');
             let fotoImg = $(e.currentTarget).find('input[id="gambar"]');
+            let imgPreview = $(e.currentTarget).find('img[id="image-preview"]');
             let konfirmasiBtn = $(e.currentTarget).find('button[id="konfirmasi"]');
             let uploaderProg = $(e.currentTarget).find('progress[id="uploader"]');
+
+            namaTxt.val(nama);
+            keteranganTxt.val(keterangan);
+            fotoImg.val("");
+          
+            
+            if(namaFoto != ""){
+                imgPreview.attr('src',"https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/foto%2F"+ namaFoto + "?alt=media")
+            }
+            
 
             if(action == 'add'){
               
@@ -135,12 +179,27 @@
                 namaTxt.prop('disabled', false);
                 keteranganTxt.prop('disabled', false);
                 fotoImg.prop('disabled', false);
+            }else if(action == 'edit'){
+                judulTxt.text("Edit Team");
+                konfirmasiBtn.text("Update");
+                namaTxt.prop('disabled', false);
+                keteranganTxt.prop('disabled', false);
+                fotoImg.prop('disabled', false);
+            }else if(action == 'delete'){
+                judulTxt.text("Hapus Team");
+                konfirmasiBtn.text("Hapus");
+                namaTxt.prop('disabled', true);
+                keteranganTxt.prop('disabled', true);
+                fotoImg.prop('disabled', true);
             }
 
             fotoImg.change(function(e){
                 
                 foto = e.target.files[0];
-                namaFoto = foto.name;
+                let filePath = fotoImg.val(); 
+                typeFoto = filePath.substr(filePath.lastIndexOf('.')+1,filePath.length);
+                console.log("File Extension ->-> "+typeFoto);
+               
 
             });
 
@@ -148,9 +207,9 @@
                 if(action == 'add'){
                     nama = namaTxt.val();
                     keterangan = keteranganTxt.val();
-                
-                   
-                    namaFoto = nama + '-' + namaFoto;
+                    if(fotoImg.val() != ""){
+                        namaFoto = nama + '.' + typeFoto;
+                    }
                     
                    
                     db.ref('/team').push({
@@ -164,40 +223,113 @@
                         } else {
                             // Data saved successfully!
                             
+                            if(fotoImg.val() != ""){
+                                let storageRef = storage.ref('foto/'+namaFoto);
+                                let uploadTask = storageRef.put(foto);
 
-                            let storageRef = storage.ref('foto/'+namaFoto);
-                            let uploadTask = storageRef.put(foto);
+                                uploadTask.on('state_changed',
 
-                            uploadTask.on('state_changed',
+                                    function progress(snapshot){
+                                        let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) *100;
+                                        uploaderProg.val(percentage);
 
-                                function progress(snapshot){
-                                    let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) *100;
-                                    uploaderProg.val(percentage);
+                                    },
+                                    function error(err){
+                                        alert('Terjadi Kesalahan !');
+                                    },
 
-                                },
-                                function error(err){
-                                    alert('Terjadi Kesalahan !');
-                                },
-
-                                function complete(){
-                                    alert('Data berhasil disimpan !');
+                                    function complete(){
+                                        alert('Data berhasil disimpan !');
+                                        location.href="/admin_edit_team"
+                                    }
+                                );
+                            }else{
+                                alert('Data berhasil disimpan !');
                                     location.href="/admin_edit_team"
-                                }
-                            );
+                            }
+                            
                         
                         }
                         
                     });
 
-                    // fotoImg.addEventListener('change', function(evt) {
-                    //     let firstFile = evt.target.files[0] // upload the first file only
-                    //     let uploadTask = storageRef.put(firstFile)
-                    // });
+                
+                
 
+                }else if(action == 'edit'){
+                    nama = namaTxt.val();
+                    keterangan = keteranganTxt.val();                                
+                    if(fotoImg.val() != ""){
+                        namaFoto = nama + '.' + typeFoto;
+                    }
+                       
+                    db.ref('/team/' + dataId).set({
+                    nama : nama,
+                    keterangan : keterangan,
+                    foto : namaFoto
+                    }, function(error) {
+                        if (error) {
+                            // The write failed...
+                        alert('Terjadi Kesalahan !');
+                        } else {
+                            // Data saved successfully!
+                            
+                            
+                            if(fotoImg.val() != ""){
+                                let storageRef = storage.ref('foto/'+namaFoto);
+                                let uploadTask = storageRef.put(foto);
 
+                                uploadTask.on('state_changed',
+
+                                    function progress(snapshot){
+                                        let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) *100;
+                                        uploaderProg.val(percentage);
+
+                                    },
+                                    function error(err){
+                                        alert('Terjadi Kesalahan !');
+                                    },
+
+                                    function complete(){
+                                        alert('Data berhasil disimpan !');
+                                        location.href="/admin_edit_team";
+                                    }
+                                );
+                            }else{
+                                alert('Data berhasil disimpan !');
+                                location.href="/admin_edit_team";
+                            }
+                        
+                        }
+                        
+                    }); 
                     
-               
+                }else if(action == 'delete'){
+                    db.ref('/team/' + dataId).remove(function(error){
+                        if (error) {
+                            // The write failed...
+                        alert('Terjadi Kesalahan !');
+                        } else {
+                            // Data saved successfully!
+                            
+                            if(namaFoto != ""){
+                                let storageRef = storage.ref('foto/'+namaFoto);
+                                storageRef.delete().then(function() {
+                                    // File deleted successfully
+                                    alert('Data berhasil dihapus !');
+                                    location.href="/admin_edit_team";
+                                }).catch(function(error) {
+                                    alert('Terjadi Kesalahan !');
+                                });
 
+                            }else{
+                                alert('Data berhasil dihapus !');
+                                location.href="/admin_edit_team";
+                            }
+                        
+                        }
+                        
+                    });
                 }
                 
             });
