--- a/functions/views/work.ejs
+++ b/functions/views/work.ejs
@@ -5,6 +5,7 @@
     <%- include('templates/head'); -%>
   
   </head>
+ 
 <!-- Head Section End -->
   
 <body>
@@ -16,66 +17,25 @@
          <!-- Content Section -->
          <div class="container-fluid pt-5 pb-5 bg-light my-4">
                 <div class="row text-center text-lg-left px-5">
-                    <div class="col-lg-4 col-md-4 col-xs-7 nopadding">
-                        <div class="hovereffect">
-                            <a href="/workdetail" class="d-block h-100">
-                                <img class="img-fluid img-responsive" src="img/contoh project1.png" alt="">
-                                <div class="overlay">
-                                    <p class="info" href="#">Qahwa Gayo</p>
+                   
+                    <%work.forEach(function(isi) {  var data = isi.val(); %>
+                        
+                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 nopadding">
+                                <div class="homegambar">                   
+                                        <a href="/workdetail">
+                                            <img class="img-fluid img-responsive workimage nopadding" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= data.foto %>?alt=media">
+                                            
+                                            <div class="overlay">
+                                                <h3 class="textwork ml-2"><%= data.nama %></h3>
+                                            </div>
+                                        </a>
                                 </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-xs-7 nopadding">
-                        <div class="hovereffect">
-                            <a href="/workdetail" class="d-block h-100">
-                                <img class="img-fluid img-responsive" src="img/contoh project1.png" alt="">
-                                <div class="overlay">
-                                    <p class="info" href="#">Qahwa Gayo</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-xs-7 nopadding">
-                        <div class="hovereffect">
-                            <a href="/workdetail" class="d-block h-100">
-                                <img class="img-fluid img-responsive" src="img/contoh project1.png" alt="">
-                                <div class="overlay">
-                                    <p class="info" href="#">Qahwa Gayo</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-xs-7 nopadding">
-                        <div class="hovereffect">
-                            <a href="/workdetail" class="d-block h-100">
-                                <img class="img-fluid img-responsive" src="img/contoh project1.png" alt="">
-                                <div class="overlay">
-                                    <p class="info" href="#">Qahwa Gayo</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-xs-7 nopadding">
-                        <div class="hovereffect">
-                            <a href="/workdetail" class="d-block h-100">
-                                <img class="img-fluid img-responsive" src="img/contoh project1.png" alt="">
-                                <div class="overlay">
-                                    <p class="info" href="#">Qahwa Gayo</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-xs-7 nopadding">
-                        <div class="hovereffect">
-                            <a href="/workdetail" class="d-block h-100">
-                                <img class="img-fluid img-responsive" src="img/contoh project1.png" alt="">
-                                <div class="overlay">
-                                    <p class="info" href="#">Qahwa Gayo</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
+                            </div>
+                       
+                
+                    <%  }); %>  
+                    
+                   
                 </div>
     
             </div>
